--- a/package.json
+++ b/package.json
@@ -6,16 +6,23 @@
   "scripts": {
     "start": "node src/app.js",
     "dev": "nodemon src/app.js",
-    "test": "echo \"Tests próxima semana\" && exit 0"
+    "test": "echo \"Tests próxima semana\" && exit 0",
+    "prisma:generate": "prisma generate",
+    "prisma:migrate": "prisma migrate dev",
+    "prisma:seed": "prisma db seed"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@prisma/adapter-pg": "^7.4.0",
+    "@prisma/client": "^7.4.0",
     "cors": "^2.8.6",
     "dotenv": "^17.3.1",
     "express": "^5.2.1",
-    "joi": "^18.0.2"
+    "joi": "^18.0.2",
+    "pg": "^8.16.3",
+    "prisma": "^7.4.0"
   },
   "devDependencies": {
     "nodemon": "^3.1.11"
